[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlora"
version = "0.1.0"
description = "Batched multi-LoRA inference runtime for PyTorch models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Knowledgator" }]
keywords = ["lora", "peft", "pytorch", "inference", "triton"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "triton>=3.0.0",
]

[project.optional-dependencies]
peft = [
    "peft",
    "safetensors",
    "transformers>=4.30.0",
]
dev = [
    "pytest",
    "peft",
    "safetensors",
    "transformers>=4.30.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["mlora"]
include-package-data = true

[tool.setuptools.package-data]
mlora = ["py.typed"]
